--- a/dev/index.html
+++ b/dev/index.html
@@ -10,7 +10,7 @@ layout: default
         <h2>Announcements</h2>
         
     </div> -->
-    <!-- {% include announcements.html %} -->
+    {% include announcements.html %}
     <br />
 
     <h2>Course Description</h2>
