--- a/course-materials/index.html
+++ b/course-materials/index.html
@@ -57,6 +57,7 @@
     <li><a class="page-link" href="/981/"><i class="fa fa-home fa-lg"></i> Home</a></li>
     <li><a class="page-link" href="/981/schedule/"><i class="fas fa-calendar-alt"></i> Schedule</a></li>
     <li><a class="page-link" href="/981/lectures/"><i class="fas fa-book-reader"></i> Lectures</a></li>
+	<li><a class="page-link" href="/981/practical/"><i class="fas fa-book-reader"></i> Practical</a></li>
     <li><a class="page-link" href="/981/assignments/"><i class="fas fa-user-graduate"></i> Assignments</a></li>
     <li><a class="page-link" href="/981/course-materials/"><i class="fas fa-book"></i> Course Materials</a></li>
 </ul>
