--- a/static_files/assignments/assignment_01_preview.html
+++ b/static_files/assignments/assignment_01_preview.html
@@ -14584,7 +14584,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>If that cell makes an error when running you can download file dl_asg01<strong>your_struden_id</strong>your_name.zip from left panel and files section by right-clicking on it and choosing download button.</p>
+<p>If that cell makes an error when running you can download file dl_asg01_your_struden_id_your_name.zip from left panel and files section by right-clicking on it and choosing download button.</p>
 
 </div>
 </div>
