preview of asg2 a bit changed.

--- a/dev/static_files/assignments/assignment_02_preview.html
+++ b/dev/static_files/assignments/assignment_02_preview.html
@@ -13193,6 +13193,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Implementation">Implementation<a class="anchor-link" href="#Implementation">&#182;</a></h3><hr>
+<p>You can use from Keras in this assignment.</p>
 <p>In this cell preprocess your data.</p>
 
 </div>
