preview of asg2 a bit changed.

--- a/dev/static_files/assignments/assignment_02_preview.html
+++ b/dev/static_files/assignments/assignment_02_preview.html
@@ -13100,7 +13100,7 @@ div#notebook {
 <li><strong>Before starting to work on the assignment Please fill your name in the next section <em>AND Remember to RUN the cell.</em> </strong></li>
 </ul>
 <p><br/></p>
-<p>Assignment Page: <a href="https://iust-deep-learning.github.io/981/assignments/01_mlp_and_preprocessing">https://iust-deep-learning.github.io/981/assignments/01_mlp_and_preprocessing</a></p>
+<p>Assignment Page: <a href=""></a></p>
 <p>Course Forum: <a href="https://groups.google.com/forum/#!forum/dl981/">https://groups.google.com/forum/#!forum/dl981/</a></p>
 
 </div>
@@ -13157,8 +13157,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Consider the public transport bus service. It has many gates on roads in the city and a special line for transporting buses rapidly.</p>
-<p>Its' line used for transporting emergency vehicles like ambulances, police cars and fire trucks. but some private cars or motorcycles use these lines, unfortunately.</p>
+<p>Consider the public transport bus service. It has many gates on roads in the city and a particular lane for bus transportation.</p>
+<p>This lane is also used for the transportation of emergency vehicles like ambulances, police cars and fire trucks, and private cars are banned from using it.</p>
 <p>Your task is to create a system to classify these two classes of vehicles.</p>
 
 </div>
@@ -13168,7 +13168,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Dataset">Dataset<a class="anchor-link" href="#Dataset">&#182;</a></h3><hr>
-<p>In this task, you must build your dataset from any method you want. Of course, we suggest seeing <a href="https://forums.fast.ai/t/tips-for-building-large-image-datasets/26688">this</a> link if you don't have any idea about building the dataset.</p>
+<p>In this task, you should build your dataset based on an arbitrary approach. Of course, we suggest having a look at <a href="https://forums.fast.ai/t/tips-for-building-large-image-datasets/26688">this</a> link if you do not have any idea about making the dataset.</p>
 
 </div>
 </div>
@@ -13176,7 +13176,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Please tell your method of building the dataset.</p>
+<p>Please explain your dataset making method.</p>
 
 </div>
 </div>
@@ -13194,7 +13194,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Implementation">Implementation<a class="anchor-link" href="#Implementation">&#182;</a></h3><hr>
 <p>You can use from Keras in this assignment.</p>
-<p>In this cell preprocess your data.</p>
+<p>Preprocess your data in this cell.</p>
 
 </div>
 </div>
@@ -13215,8 +13215,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In this cell build your model and train it.</p>
-<p>Use generator and augmentation for feeding data to the network.</p>
+<p>Build and train your model in the following cell.</p>
+<p>Use generator and augmentation in order to feed data to the network.</p>
 
 </div>
 </div>
@@ -13237,7 +13237,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In this cell test your model and report its f1-score, recall and precision and save it with this path 'ASSIGNMENT_PATH / 'my_model.h5''.</p>
+<p>Now, test your model, report the f1-score, recall and precision, and then save the model in a file with path 'ASSIGNMENT_PATH / 'my_model.h5''.</p>
 
 </div>
 </div>
@@ -13254,6 +13254,22 @@ div#notebook {
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Please explain that what type of loss and accuracy you set for training your model and why?</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>$\color{red}{\text{Write your answer here}}$</p>
+
+</div>
+</div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
