--- a/dev/static_files/assignments/assignment_02_preview.html
+++ b/dev/static_files/assignments/assignment_02_preview.html
@@ -13089,7 +13089,7 @@ div#notebook {
 <p><strong>Please pay attention to these notes:</strong></p>
 <p><br/></p>
 <ul>
-<li><strong>Assignment Due: </strong> 1398/--/-- 23:59</li>
+<li><strong>Assignment Due: </strong> 1398/9/23 23:59</li>
 <li>If you need any additional information, please review the assignment page on the course website.</li>
 <li>We always recommend co-operation and discussion in groups for assignments. However, each student has to finish all the questions by himself/herself. If our matching system identifies any sort of copying, you'll be responsible for consequences. So, please mention his/her name if you have a team-mate.</li>
 <li>Students who audit this course should submit their assignments like other students to be qualified for attending the rest of the sessions.</li>
@@ -13100,7 +13100,7 @@ div#notebook {
 <li><strong>Before starting to work on the assignment Please fill your name in the next section <em>AND Remember to RUN the cell.</em> </strong></li>
 </ul>
 <p><br/></p>
-<p>Assignment Page: <a href=""></a></p>
+<p>Assignment Page: <a href="https://iust-deep-learning.github.io/981/assignments/02_image_task_and_visualization">https://iust-deep-learning.github.io/981/assignments/02_image_task_and_visualization</a></p>
 <p>Course Forum: <a href="https://groups.google.com/forum/#!forum/dl981/">https://groups.google.com/forum/#!forum/dl981/</a></p>
 
 </div>
@@ -13238,6 +13238,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Now, test your model, report the f1-score, recall and precision, and then save the model in a file with path 'ASSIGNMENT_PATH / 'my_model.h5''.</p>
+<p>Plot loss and accuracy.</p>
 
 </div>
 </div>
@@ -13262,6 +13263,35 @@ div#notebook {
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>$\color{red}{\text{Write your answer here}}$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Visualize some layers and analyze them.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+    </div>
+</div>
+</div>
+
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
