--- a/practical/index.html
+++ b/practical/index.html
@@ -391,7 +391,7 @@
     </div>
     
     <div class="content">
-        <span><a href="#">Transfer Learning and Sequence to Sequnce Model</a></span><br />
+        <span><a href="#">Transfer Learning and Sequence to Sequence Model</a></span><br />
 
         <strong>tl;dr:</strong> What is Transfer learning? How to use a pretrain model in Keras? What is Sequence to Sequence models and how to implement a machine translation model?
         <br />
