--- a/static_files/assignments/assignment_03_preview.html
+++ b/static_files/assignments/assignment_03_preview.html
@@ -13319,7 +13319,7 @@ A pre-trained model can extract the features of an image itself. So at first, pl
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Remember the <strong>Transfer Learning and Sequence to Sequence Model</strong> practical class; you learned how to use a pre-trained model, and how to train a sequence to sequence model. In this task, you are going to build a sequence to sequence model by feeding English characters and predicting French and Persian characters. There are some criteria that you must consider:</p>
+<p>Remember the <strong>Transfer Learning and Sequence to Sequence Model</strong> practical class; you learned how to use a pre-trained model, and how to train a sequence to sequence model. In this task, you are going to build a sequence to sequence model by feeding English characters into your model and predicting French and Persian characters. There are some criteria that you must consider:</p>
 <ol>
 <li><p>You have learned about building a character level sequence to sequence model in the <a href="https://iust-deep-learning.github.io/981/practical/">practical class</a>. You can review the full instruction and the code <a href="https://blog.keras.io/a-ten-minute-introduction-to-sequence-to-sequence-learning-in-keras.html">here</a> (We suggest practicing with <a href="https://colab.research.google.com/drive/1LS0jeq6glTKoY7zRyQBvbBHmH-jKowZO">this</a> notebook before jumping to the answer). For your homework, you must implement a character-level multi-objective sequence to sequence model, which translates English texts to French and Persian Simultaneously. You can learn about building neural networks with multiple outputs <a href="https://sanjayasubedi.com.np/deeplearning/multioutput-keras/">here</a>.</p>
 </li>
@@ -13344,7 +13344,7 @@ A pre-trained model can extract the features of an image itself. So at first, pl
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In this task, you are going to build a sequence to sequence model by feeding English words and predicting French words. There are some criteria that you must consider:</p>
+<p>In this task, you are going to build a sequence to sequence model by feeding English words into your model and predicting French words. There are some criteria that you must consider:</p>
 <ol>
 <li><p>You <strong>must</strong> use BERT embedding for the input data. We encourage you to convert words to an embedding vector using <a href="https://github.com/hanxiao/bert-as-service">this</a> repository. The mentioned service helps you to convert your sentences into vectors, which represents the words with respect to the context of the sentence. You can learn more about BERT <a href="https://arxiv.org/abs/1810.04805">here</a>.</p>
 </li>
