--- a/dev/static_files/assignments/assignment_03_preview.html
+++ b/dev/static_files/assignments/assignment_03_preview.html
@@ -13105,7 +13105,7 @@ div#notebook {
 <li><strong>Before starting to work on the assignment Please fill your name in the next section <em>AND Remember to RUN the cell.</em> </strong></li>
 </ul>
 <p><br/></p>
-<p>Assignment Page:</p>
+<p>Assignment Page: <a href="https://iust-deep-learning.github.io/981/assignments/03_transfer_learning_and_sequence_to_sequence_models">https://iust-deep-learning.github.io/981/assignments/03_transfer_learning_and_sequence_to_sequence_models</a></p>
 <p>Course Forum: <a href="https://groups.google.com/forum/#!forum/dl981/">https://groups.google.com/forum/#!forum/dl981/</a></p>
 
 </div>
