--- a/final_project/index.html
+++ b/final_project/index.html
@@ -201,6 +201,8 @@
     <h1>Important Dates</h1>
     <ul>
       <li>Proposal deadline: <span style='font-weight: bold'>1398/9/25</span></li>
+	  <li>Final report deadline: <span style='font-weight: bold'>1398/11/7</span></li>
+	  <li>Project presentation session: <span style='font-weight: bold'>1398/11/8</span></li>
     </ul>
   
     Please read the <a href='/981/final_project/guidelines'>Final Project Guidelines</a> carefully, We'll guide you through all details you need.
