--- a/lectures/index.html
+++ b/lectures/index.html
@@ -204,7 +204,7 @@
     
     <div class="thumbnail">
       <div class="center-cropped" style="margin-top:5px;margin-bottom:5px;background-image: url('/982/static_files/thumbnails/1.PNG');">
-        <img src="/981/static_files/thumbnails/lec01.png" />
+        <img src="/982/static_files/thumbnails/1.PNG" />
       </div>
     </div>
     
