--- a/lectures/index.html
+++ b/lectures/index.html
@@ -268,8 +268,8 @@
 <div class="lecture-container">
     
     <div class="thumbnail">
-      <div class="center-cropped" style="margin-top:5px;margin-bottom:5px;background-image: url('/981/static_files/thumbnails/lec03.png');">
-        <img src="/981/static_files/thumbnails/lec03.png" />
+      <div class="center-cropped" style="margin-top:5px;margin-bottom:5px;background-image: url('/982/static_files/thumbnails/3.PNG');">
+        <img src="/982/static_files/thumbnails/3.PNG" />
       </div>
     </div>
     
