--- a/lectures/index.html
+++ b/lectures/index.html
@@ -346,8 +346,8 @@
 <div class="lecture-container">
     
     <div class="thumbnail">
-      <div class="center-cropped" style="margin-top:5px;margin-bottom:5px;background-image: url('/982/static_files/thumbnails/5.PNG');">
-        <img src="/982/static_files/thumbnails/5.PNG" />
+      <div class="center-cropped" style="margin-top:5px;margin-bottom:5px;background-image: url('/982/static_files/thumbnails/5.jpg');">
+        <img src="/982/static_files/thumbnails/5.jpg" />
       </div>
     </div>
     
